--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing Page</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <nav class="nav">
+      <div class="nav-logo">
+        <ul>
+          <li>
+            <a href="#">Logo</a>
+          </li>
+        </ul>
+      </div>
+      <div class="nav-links">
+        <ul>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <header class="header">
+      <div class="header-text">
+        <h1>This website is awesome</h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum distinctio
+          consequatur rerum amet. Similique, ipsa.
+        </p>
+        <button class="hedaer-button">Sign up</button>
+      </div>
+      <div class="header-img">
+        <img src="" alt="">
+      </div>
+    </header>
+  </body>
 </html>
