Add navbar and header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <nav class="nav">
+    <nav class="nav wrapper">
       <div class="nav-logo">
         <ul>
           <li>
@@ -28,18 +28,21 @@
         </ul>
       </div>
     </nav>
-
     <header class="header">
-      <div class="header-text">
-        <h1>This website is awesome</h1>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum distinctio
-          consequatur rerum amet. Similique, ipsa.
-        </p>
-        <button class="hedaer-button">Sign up</button>
-      </div>
-      <div class="header-img">
-        <img src="" alt="">
+      <div class="wrapper">
+        <div class="header-content">
+          <div class="header-text">
+            <h1>This website is awesome</h1>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum distinctio
+              consequatur rerum amet. Similique, ipsa.
+            </p>
+            <button class="header-button">Sign up</button>
+          </div>
+          <div class="header-img">
+            <img src="./images/circuit-7447920_1280.png" alt="" />
+          </div>
+        </div>
       </div>
     </header>
   </body>
