--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <nav class="nav wrapper">
-      <div class="nav-logo">
-        <ul>
-          <li>
-            <a href="#">Logo</a>
-          </li>
-        </ul>
-      </div>
-      <div class="nav-links">
-        <ul>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+    <nav class="nav">
+      <div class="nav-wrapper">
+        <div class="nav-logo">
+          <ul>
+            <li>
+              <a href="#">Logo</a>
+            </li>
+          </ul>
+        </div>
+        <div class="nav-links">
+          <ul>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
       </div>
     </nav>
     <header class="header">
@@ -45,5 +47,23 @@
         </div>
       </div>
     </header>
+    <main>
+      <section class="products section-padding">
+        <div class="wrapper">
+          <h2 class="section-title">Products</h2>
+          <div class="products-content">
+            <div class="product one">
+              <div class="product-icon"></div>
+              <div class="product-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+              </div>
+            </div>
+            <div class="product two"></div>
+            <div class="product three"></div>
+            <div class="product four"></div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
