Add Products section

--- a/index.html
+++ b/index.html
@@ -52,15 +52,38 @@
         <div class="wrapper">
           <h2 class="section-title">Products</h2>
           <div class="products-content">
-            <div class="product one">
-              <div class="product-icon"></div>
+            <div class="product-one product">
+              <div class="product-icon">
+                <img src="./svgs/briefcase.svg" alt="" />
+              </div>
               <div class="product-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing.
               </div>
             </div>
-            <div class="product two"></div>
-            <div class="product three"></div>
-            <div class="product four"></div>
+            <div class="product-two product">
+              <div class="product-icon">
+                <img src="./svgs/bulb.svg" alt="" />
+              </div>
+              <div class="product-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+              </div>
+            </div>
+            <div class="product-three product">
+              <div class="product-icon">
+                <img src="./svgs/shopping-bag.svg" alt="" />
+              </div>
+              <div class="product-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+              </div>
+            </div>
+            <div class="product-four product">
+              <div class="product-icon">
+                <img src="./svgs/usd-circle.svg" alt="" />
+              </div>
+              <div class="product-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+              </div>
+            </div>
           </div>
         </div>
       </section>
