Add Quote section

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </header>
     <main>
       <section class="products section-padding">
+        <h2 class="section-title">Products</h2>
         <div class="wrapper">
-          <h2 class="section-title">Products</h2>
           <div class="products-content">
             <div class="product-one product">
               <div class="product-icon">
@@ -84,6 +84,19 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing.
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="quote-section section-padding">
+        <div class="wrapper">
+          <div class="quote-text">
+            <p>
+              This is an inspiring quote, or a testimonial from a customer. Maybe it's
+              just filling up space, or maybe people will actually read it. Who knows? All
+              I know is that it looks nice.
+            </p>
+            <span>- Thor, God of Thunder</span>
           </div>
         </div>
       </section>
