Make call-to-action HTML structure

--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@
           </div>
         </div>
       </section>
+
+      <section class="cta-section section-padding">
+        <div class="wrapper">
+          <div class="cta">
+            <div class="cta-text">
+              <p>Call to action! It's time!</p>
+              <p>Sign up for our product by clicking the button right over there!</p>
+            </div>
+          </div>
+          <a href="#" class="cta-button">Sign up</a>
+        </div>
+      </section>
     </main>
   </body>
 </html>
