Make cta taller & add h3

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="wrapper">
           <div class="cta">
             <div class="cta-text">
-              <p>Call to action! It's time!</p>
+              <h3>Call to action! It's time!</h3>
               <p>Sign up for our product by clicking the button right over there!</p>
             </div>
             <a href="#" class="cta-button">Sign up</a>
