--- a/index.html
+++ b/index.html
@@ -113,5 +113,9 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <p>Copyright &copy; 2021 The Odin Project</p>
+    </footer>
   </body>
 </html>
